--- a/web/package.json
+++ b/web/package.json
@@ -4,6 +4,8 @@
   "description": "APD app for CMS HITECH program",
   "main": "app.js",
   "scripts": {
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
     "make-state-icons": "babel-node scripts/stateIcons.js && cp src/data/states-small/* src/static/img/states/",
     "scaffold": "rm -rf dist && mkdir dist && cp -r src/static dist/",
     "build": "npm run scaffold && NODE_ENV=production webpack -p",
@@ -103,6 +105,7 @@
     "babel-plugin-transform-require-context": "^0.1.1",
     "css-loader": "^3.4.2",
     "cssnano": "^4.1.10",
+    "cypress": "^4.10.0",
     "d3-geo": "^1.11.9",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
