add migration.hbs for generating migrations

--- a/api/package.json
+++ b/api/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint '**/*.js'",
     "make-migrate": "knex migrate:make",
     "migrate": "knex migrate:latest",
+    "plop": "plop",
     "seed": "knex seed:run",
     "start": "node main.js",
     "start-dev": "nodemon ./main.js -e js",
@@ -95,6 +96,7 @@
     "eslint-plugin-import": "^2.20.1",
     "jest": "^25.2.1",
     "nodemon": "^2.0.4",
+    "plop": "^2.7.4",
     "prettier": "^1.19.1",
     "sinon": "^8.1.1",
     "stream-mock": "^2.0.5",
